Fix outlaw artifact, fix spacing of background on user portrait area

--- a/app/assets/stylesheets/partials/_app.sass
+++ b/app/assets/stylesheets/partials/_app.sass
@@ -402,7 +402,7 @@ h1#head
   display: block
   top: 10px
   right: 10px
-  height: 73px
+  height: 85px
   padding: 5px
   text-shadow: #050505 3px 3px 3px
   .img
