--- a/public/assets/screen.css
+++ b/public/assets/screen.css
@@ -1542,7 +1542,7 @@ h1#head span {
   display: block;
   top: 10px;
   right: 10px;
-  height: 73px;
+  height: 85px;
   padding: 5px;
   text-shadow: #050505 3px 3px 3px;
 }
